--- a/app-developers-utah.html
+++ b/app-developers-utah.html
@@ -291,11 +291,11 @@
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
                     <h3>Company</h3>
                     <ul class="list-unstyled company-links">
-                        <li><a href="#">Overview</a></li>
-                        <li><a href="#">Innovation</a></li>
-                        <li><a href="#">Management</a></li>
-                        <li><a href="#">Environment</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="overview.html">Overview</a></li>
+                        <li><a href="innovation.html">Innovation</a></li>
+                        <li><a href="management.html">Management</a></li>
+                        <li><a href="environment.html">Environment</a></li>
+                        <li><a href="privacy-policy.php">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
