--- a/index.html
+++ b/index.html
@@ -438,18 +438,18 @@
               <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
                   <h3>Company</h3>
                   <ul class="list-unstyled company-links">
-                      <li><a href="#">Overview</a></li>
-                      <li><a href="#">Innovation</a></li>
-                      <li><a href="#">Management</a></li>
-                      <li><a href="#">Environment</a></li>
-                      <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="overview.html">Overview</a></li>
+                    <li><a href="innovation.html">Innovation</a></li>
+                    <li><a href="management.html">Management</a></li>
+                    <li><a href="environment.html">Environment</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
                   </ul>
               </div>
               <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
-                  <h3 class="float-lg-start"><a class="heading-link" href="#">CAREERS</a></h3>
+                  <h3 class="float-lg-start"><a class="heading-link" href="career.html">CAREERS</a></h3>
                   <h3 class="float-lg-end"><a class="heading-link" href="#">BLOG</a></h3>
                   <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
-                  <p class="text-muted"><a class="text-black" href="#">CLIENT IDEAS SHEET</a></p>
+                  <p class="text-muted"><a class="text-black" href="assets/docs/client-ideas-sheet.pdf" target="_blank">CLIENT IDEAS SHEET</a></p>
               </div>
           </div>
       </div>
