updated pages completed

--- a/app-developers-utah.html
+++ b/app-developers-utah.html
@@ -16,7 +16,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.css">
     <!-- Custom Style -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Appsbee</title>
+    <title>Mobile App Development Utah |  App Developers for IOS &amp; Android</title>
+    <meta name="title" content="Mobile App Development Utah |  App Developers for IOS &amp; Android">
+    <meta name="description" content="Our mobile app developers in Utah develop both ios app &amp; android app. Appsbee, app development company design, develop &amp; deploy custom app as per your requirement.">
+    <meta name="keywords" content="app developers in Utah, ios app developers in utah, app developers in provo, app developers in Lehi, app developers in sugar house">
 </head>
 <body>
 
@@ -279,13 +282,13 @@
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
                     <h3>CASE STUDIES</h3>
                     <ul class="list-unstyled case-links">
-                        <li><a href="#">Docsink</a></li>
-                        <li><a href="#">Amber Alert GPS</a></li>
-                        <li><a href="#">Kolkata Airport</a></li>
-                        <li><a href="#">Eptisa</a></li>
-                        <li><a href="#">Inkubate</a></li>
-                        <li><a href="#">Grid</a></li>
-                        <li><a href="#">Meri Jaan</a></li>
+                      <li><a href="docsink.html">Docsink</a></li>
+                      <li><a href="amber-alert-gps.html">Amber Alert GPS</a></li>
+                      <li><a href="kolkata-airport.html">Kolkata Airport</a></li>
+                      <li><a href="eptisa.html">Eptisa</a></li>
+                      <li><a href="inkubate.html">Inkubate</a></li>
+                      <li><a href="grid.html">Grid</a></li>
+                      <li><a href="meri-jaan.html">Meri Jaan</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
@@ -295,20 +298,20 @@
                         <li><a href="innovation.html">Innovation</a></li>
                         <li><a href="management.html">Management</a></li>
                         <li><a href="environment.html">Environment</a></li>
-                        <li><a href="privacy-policy.php">Privacy Policy</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
-                    <h3 class="float-lg-start"><a class="heading-link" href="#">CAREERS</a></h3>
-                    <h3 class="float-lg-end"><a class="heading-link" href="#">BLOG</a></h3>
+                    <h3 class="float-lg-start"><a class="heading-link" href="career.html">CAREERS</a></h3>
+                    <h3 class="float-lg-end"><a class="heading-link" href="blog.html">BLOG</a></h3>
                     <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
-                    <p class="text-muted"><a class="text-black" href="#">CLIENT IDEAS SHEET</a></p>
+                    <p class="text-muted"><a class="text-black" href="assets/docs/client-ideas-sheet.pdf" target="_blank">CLIENT IDEAS SHEET</a></p>
                 </div>
             </div>
         </div>
       </footer>
       <!-- End Of Footer Section -->
-      <div class="footer-bottom bg-light py-3">
+      <div class="footer-bottom bg-lightgrey py-3">
         <div class="container">
           <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
         </div>
