--- a/environment.html
+++ b/environment.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
                     <h3 class="float-lg-start"><a class="heading-link" href="career.html">CAREERS</a></h3>
-                    <h3 class="float-lg-end"><a class="heading-link" href="#">BLOG</a></h3>
+                    <h3 class="float-lg-end"><a class="heading-link" href="blog.html">BLOG</a></h3>
                     <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
                     <p class="text-muted"><a class="text-black" href="assets/docs/client-ideas-sheet.pdf" target="_blank">CLIENT IDEAS SHEET</a></p>
                 </div>
@@ -166,7 +166,7 @@
         </div>
       </footer>
       <!-- End Of Footer Section -->
-      <div class="footer-bottom bg-light py-3">
+      <div class="footer-bottom bg-lightgrey py-3">
         <div class="container">
           <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
         </div>
