--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.css">
     <!-- Custom Style -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Appsbee</title>
+    <title>Appsbee: Software &amp; solutions in Utah | Machine learning &amp; blockchain</title>
+    <meta name="title" content="Appsbee: Software &amp; solutions in Utah | Machine learning &amp; blockchain">
+    <meta name="description" content="Appsbee is a global IT consulting firm offering enterprise mobility, machine learning, blockchain technology, IoT, corporate solutions, Cloud solutions, application development and SMAC . ">
+    <meta name="keywords" content="app development company in utah, app development utah, mobile app development utah, corporate it services, technology consulting firms, enterprise mobility, cloud solutions, saas development, machine learning utah, blockchain utah, IoT utah">
 </head>
 <body>
 
@@ -235,7 +238,7 @@
           </div>
       </div>
     </section>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 235">
       <path fill="#B82B2F" fill-opacity="1" d="M0,224L26.7,186.7C53.3,149,107,75,160,42.7C213.3,11,267,21,320,53.3C373.3,85,427,139,480,144C533.3,149,587,107,640,96C693.3,85,747,107,800,101.3C853.3,96,907,64,960,85.3C1013.3,107,1067,181,1120,213.3C1173.3,245,1227,235,1280,213.3C1333.3,192,1387,160,1413,144L1440,128L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z">
       </path>
     </svg>
@@ -395,11 +398,9 @@
             </div>
           </div>
           <div class="clear"></div>
-          <div class="col-sm-6 text-center">
-            <div id="RecaptchaField1" style=" margin-top: 40px; transform:scale(0.77);-webkit-transform:scale(0.77);transform-origin:0 0;-webkit-transform-origin:0 0; "><div style="width: 304px; height: 78px;"><div><iframe title="reCAPTCHA" width="304" height="78" role="presentation" name="a-sun5rtbiz8c9" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation" src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6LeObloUAAAAAF4VUdN6FWtR6KPA8n7NALwrMbEm&amp;co=ZmlsZTo.&amp;hl=en&amp;v=vm_YDiq1BiI3a8zfbIPZjtF2&amp;size=normal&amp;cb=37l1mcp0cedi"></iframe></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea></div></div>
-          </div>
-          <div class="col-6">
-            <button class="btn_n3" type="submit">Let's Connect</button>
+          
+          <div class="col-12 mt-4 text-center">
+            <button class="btn_n3 px-5 btn-lg" type="submit">Let's Connect</button>
           </div>
         </div>
       </form>
@@ -410,112 +411,110 @@
 
     <!-- Footer Section -->
 
-    <footer class="w-100 py-4 flex-shrink-0 footer-heading-links">
-      <div class="container py-4">
-          <div class="row">
-              <div class="col-lg-3 col-md-12 col-12 address-links text-lg-start text-center">
-                  <h3 class="text-uppercase">ADDRESS</h3>
-                  <h5>Appsbee U.S </h5>
-                  <p>3450 N. Triumph Blvd. Suite 102,Lehi Utah 84043</p>
-                  <h5>Appsbee Europe</h5>
-                  <p>Tarandės g. 34, Vilnius 14188, Lithuania</p>
-                  <h5>Appsbee India</h5>
-                  <p>Rishi Tech Park, Street No: 360, DH6/2, Newtown, Kolkata: 700156, India</p>
-                  <!-- <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p> -->
-              </div>
-              <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
-                  <h3>CASE STUDIES</h3>
-                  <ul class="list-unstyled case-links">
-                      <li><a href="#">Docsink</a></li>
-                      <li><a href="#">Amber Alert GPS</a></li>
-                      <li><a href="#">Kolkata Airport</a></li>
-                      <li><a href="#">Eptisa</a></li>
-                      <li><a href="#">Inkubate</a></li>
-                      <li><a href="#">Grid</a></li>
-                      <li><a href="#">Meri Jaan</a></li>
-                  </ul>
-              </div>
-              <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
-                  <h3>Company</h3>
-                  <ul class="list-unstyled company-links">
+   <footer class="w-100 py-4 flex-shrink-0 footer-heading-links">
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-lg-3 col-md-12 col-12 address-links text-lg-start text-center">
+                <h3 class="text-uppercase">ADDRESS</h3>
+                <h5>Appsbee U.S </h5>
+                <p>3450 N. Triumph Blvd. Suite 102,Lehi Utah 84043</p>
+                <h5>Appsbee Europe</h5>
+                <p>Tarandės g. 34, Vilnius 14188, Lithuania</p>
+                <h5>Appsbee India</h5>
+                <p>Rishi Tech Park, Street No: 360, DH6/2, Newtown, Kolkata: 700156, India</p>
+                <!-- <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p> -->
+            </div>
+            <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                <h3>CASE STUDIES</h3>
+                <ul class="list-unstyled case-links">
+                  <li><a href="docsink.html">Docsink</a></li>
+                  <li><a href="amber-alert-gps.html">Amber Alert GPS</a></li>
+                  <li><a href="kolkata-airport.html">Kolkata Airport</a></li>
+                  <li><a href="eptisa.html">Eptisa</a></li>
+                  <li><a href="inkubate.html">Inkubate</a></li>
+                  <li><a href="grid.html">Grid</a></li>
+                  <li><a href="meri-jaan.html">Meri Jaan</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                <h3>Company</h3>
+                <ul class="list-unstyled company-links">
                     <li><a href="overview.html">Overview</a></li>
                     <li><a href="innovation.html">Innovation</a></li>
                     <li><a href="management.html">Management</a></li>
                     <li><a href="environment.html">Environment</a></li>
                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                  </ul>
-              </div>
-              <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
-                  <h3 class="float-lg-start"><a class="heading-link" href="career.html">CAREERS</a></h3>
-                  <h3 class="float-lg-end"><a class="heading-link" href="#">BLOG</a></h3>
-                  <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
-                  <p class="text-muted"><a class="text-black" href="assets/docs/client-ideas-sheet.pdf" target="_blank">CLIENT IDEAS SHEET</a></p>
-              </div>
-          </div>
-      </div>
-    </footer>
-    <!-- End Of Footer Section -->
-    <div class="footer-bottom bg-light py-3">
-      <div class="container">
-        <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
-      </div>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                <h3 class="float-lg-start"><a class="heading-link" href="career.html">CAREERS</a></h3>
+                <h3 class="float-lg-end"><a class="heading-link" href="blog.html">BLOG</a></h3>
+                <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
+                <p class="text-muted"><a class="text-black" href="assets/docs/client-ideas-sheet.pdf" target="_blank">CLIENT IDEAS SHEET</a></p>
+            </div>
+        </div>
     </div>
+  </footer>
+  <!-- End Of Footer Section -->
+  <div class="footer-bottom bg-lightgrey py-3">
+    <div class="container">
+      <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
+    </div>
+  </div>
 
-     <!-- Form Modal -->
+   <!-- Form Modal -->
 
-     <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content form-modal-bg py-3">
-          <div class="modal-header">
-              <h4 class="cont-new text-center">Contact Appsbee</h4>
-            <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body top-footer-section py-0">
-              <form id="footerForm" action="#" method="GET" enctype="multipart/form-data">
-                  <div class="container">
-                    <div class="row p-4">
-                      <div class="col-12">
-                        <div class="row-part">
-                          <input type="text" name="name" placeholder="Your Name:" class="w-100" required="required">
-                        </div>
-                        <div class="row-part">
-                          <input type="email" name="email" placeholder="Email:" class="w-100" required="required">
-                        </div>
-                        <div class="row-part">
-                          <input type="text" name="phone" placeholder="Phone:" class="w-100" required="required">
-                        </div>
-                        <div class="row-part">
-                          <input type="text" name="subject" placeholder="Subject:" class="w-100" required="required">
-                        </div>
-                        <div class="row-part">
-                          <textarea class="txt-area-bot w-100" name="requirement"  placeholder="Tell Us About Your Requirement:" required="required"></textarea>
-                        </div>
+   <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content form-modal-bg py-3">
+        <div class="modal-header">
+            <h4 class="cont-new text-center">Contact Appsbee</h4>
+          <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body top-footer-section py-0">
+            <form id="footerForm" action="#" method="GET" enctype="multipart/form-data">
+                <div class="container">
+                  <div class="row p-4">
+                    <div class="col-12">
+                      <div class="row-part">
+                        <input type="text" name="name" placeholder="Your Name:" class="w-100" required="required">
+                      </div>
+                      <div class="row-part">
+                        <input type="email" name="email" placeholder="Email:" class="w-100" required="required">
+                      </div>
+                      <div class="row-part">
+                        <input type="text" name="phone" placeholder="Phone:" class="w-100" required="required">
+                      </div>
+                      <div class="row-part">
+                        <input type="text" name="subject" placeholder="Subject:" class="w-100" required="required">
+                      </div>
+                      <div class="row-part">
+                        <textarea class="txt-area-bot w-100" name="requirement"  placeholder="Tell Us About Your Requirement:" required="required"></textarea>
                       </div>
                     </div>
-                    <div class="clear"></div>
-                    <div class="col-12 text-center">
-                      <button class="btn_n3 w-50 mb-3" type="submit">Let's Connect</button>
-                    </div>
                   </div>
-                </form>
-          </div>
-          <div class="modal-footer border-top">
+                  <div class="clear"></div>
+                  <div class="col-12 text-center">
+                    <button class="btn_n3 w-50 mb-3" type="submit">Let's Connect</button>
+                  </div>
+                </div>
+              </form>
         </div>
+        <div class="modal-footer border-top">
       </div>
     </div>
+  </div>
 
-    <!-- End Of Form Modal -->
+  <!-- End Of Form Modal -->
 
-
-
-    <!--  Optional JavaScript -->
-    <script src="assets/js/jquery-3.6.3.min.js"></script>
-    <!-- Bootstrap Bundle Js -->
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <!-- carousel Js-->
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <!-- Custom Js -->
-    <script src="assets/js/custom.js"></script>
-    
+  <!--  Optional JavaScript -->
+  <script src="assets/js/jquery-3.6.3.min.js"></script>
+  <!-- Bootstrap Bundle Js -->
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <!-- carousel Js-->
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <!-- Custom Js -->
+  <script src="assets/js/custom.js"></script>
+  
 </body>
 </html>
