--- a/overview.html
+++ b/overview.html
@@ -179,110 +179,110 @@
 
     <!-- Footer Section -->
 
-    <footer class="w-100 py-4 flex-shrink-0 footer-heading-links">
-        <div class="container py-4">
-            <div class="row">
-                <div class="col-lg-3 col-md-12 col-12 address-links text-lg-start text-center">
-                    <h3 class="text-uppercase">ADDRESS</h3>
-                    <h5>Appsbee U.S </h5>
-                    <p>3450 N. Triumph Blvd. Suite 102,Lehi Utah 84043</p>
-                    <h5>Appsbee Europe</h5>
-                    <p>Tarandės g. 34, Vilnius 14188, Lithuania</p>
-                    <h5>Appsbee India</h5>
-                    <p>Rishi Tech Park, Street No: 360, DH6/2, Newtown, Kolkata: 700156, India</p>
-                    <!-- <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p> -->
-                </div>
-                <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
-                    <h3>CASE STUDIES</h3>
-                    <ul class="list-unstyled case-links">
-                        <li><a href="#">Docsink</a></li>
-                        <li><a href="#">Amber Alert GPS</a></li>
-                        <li><a href="#">Kolkata Airport</a></li>
-                        <li><a href="#">Eptisa</a></li>
-                        <li><a href="#">Inkubate</a></li>
-                        <li><a href="#">Grid</a></li>
-                        <li><a href="#">Meri Jaan</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
-                    <h3>Company</h3>
-                    <ul class="list-unstyled company-links">
-                        <li><a href="overview.html">Overview</a></li>
-                        <li><a href="innovation.html">Innovation</a></li>
-                        <li><a href="management.html">Management</a></li>
-                        <li><a href="environment.html">Environment</a></li>
-                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
-                    <h3 class="float-lg-start"><a class="heading-link" href="career.html">CAREERS</a></h3>
-                    <h3 class="float-lg-end"><a class="heading-link" href="#">BLOG</a></h3>
-                    <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
-                    <p class="text-muted"><a class="text-black" href="assets/docs/client-ideas-sheet.pdf" target="_blank">CLIENT IDEAS SHEET</a></p>
-                </div>
+   <footer class="w-100 py-4 flex-shrink-0 footer-heading-links">
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-lg-3 col-md-12 col-12 address-links text-lg-start text-center">
+                <h3 class="text-uppercase">ADDRESS</h3>
+                <h5>Appsbee U.S </h5>
+                <p>3450 N. Triumph Blvd. Suite 102,Lehi Utah 84043</p>
+                <h5>Appsbee Europe</h5>
+                <p>Tarandės g. 34, Vilnius 14188, Lithuania</p>
+                <h5>Appsbee India</h5>
+                <p>Rishi Tech Park, Street No: 360, DH6/2, Newtown, Kolkata: 700156, India</p>
+                <!-- <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p> -->
+            </div>
+            <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                <h3>CASE STUDIES</h3>
+                <ul class="list-unstyled case-links">
+                  <li><a href="docsink.html">Docsink</a></li>
+                  <li><a href="amber-alert-gps.html">Amber Alert GPS</a></li>
+                  <li><a href="kolkata-airport.html">Kolkata Airport</a></li>
+                  <li><a href="eptisa.html">Eptisa</a></li>
+                  <li><a href="inkubate.html">Inkubate</a></li>
+                  <li><a href="grid.html">Grid</a></li>
+                  <li><a href="meri-jaan.html">Meri Jaan</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                <h3>Company</h3>
+                <ul class="list-unstyled company-links">
+                    <li><a href="overview.html">Overview</a></li>
+                    <li><a href="innovation.html">Innovation</a></li>
+                    <li><a href="management.html">Management</a></li>
+                    <li><a href="environment.html">Environment</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                <h3 class="float-lg-start"><a class="heading-link" href="career.html">CAREERS</a></h3>
+                <h3 class="float-lg-end"><a class="heading-link" href="blog.html">BLOG</a></h3>
+                <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
+                <p class="text-muted"><a class="text-black" href="assets/docs/client-ideas-sheet.pdf" target="_blank">CLIENT IDEAS SHEET</a></p>
             </div>
         </div>
-      </footer>
-      <!-- End Of Footer Section -->
-      <div class="footer-bottom bg-light py-3">
-        <div class="container">
-          <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
+    </div>
+  </footer>
+  <!-- End Of Footer Section -->
+  <div class="footer-bottom bg-lightgrey py-3">
+    <div class="container">
+      <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
+    </div>
+  </div>
+
+   <!-- Form Modal -->
+
+   <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content form-modal-bg py-3">
+        <div class="modal-header">
+            <h4 class="cont-new text-center">Contact Appsbee</h4>
+          <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-      </div>
-
-       <!-- Form Modal -->
-
-       <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content form-modal-bg py-3">
-            <div class="modal-header">
-                <h4 class="cont-new text-center">Contact Appsbee</h4>
-              <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body top-footer-section py-0">
-                <form id="footerForm" action="#" method="GET" enctype="multipart/form-data">
-                    <div class="container">
-                      <div class="row p-4">
-                        <div class="col-12">
-                          <div class="row-part">
-                            <input type="text" name="name" placeholder="Your Name:" class="w-100" required="required">
-                          </div>
-                          <div class="row-part">
-                            <input type="email" name="email" placeholder="Email:" class="w-100" required="required">
-                          </div>
-                          <div class="row-part">
-                            <input type="text" name="phone" placeholder="Phone:" class="w-100" required="required">
-                          </div>
-                          <div class="row-part">
-                            <input type="text" name="subject" placeholder="Subject:" class="w-100" required="required">
-                          </div>
-                          <div class="row-part">
-                            <textarea class="txt-area-bot w-100" name="requirement"  placeholder="Tell Us About Your Requirement:" required="required"></textarea>
-                          </div>
-                        </div>
+        <div class="modal-body top-footer-section py-0">
+            <form id="footerForm" action="#" method="GET" enctype="multipart/form-data">
+                <div class="container">
+                  <div class="row p-4">
+                    <div class="col-12">
+                      <div class="row-part">
+                        <input type="text" name="name" placeholder="Your Name:" class="w-100" required="required">
                       </div>
-                      <div class="clear"></div>
-                      <div class="col-12 text-center">
-                        <button class="btn_n3 w-50 mb-3" type="submit">Let's Connect</button>
+                      <div class="row-part">
+                        <input type="email" name="email" placeholder="Email:" class="w-100" required="required">
+                      </div>
+                      <div class="row-part">
+                        <input type="text" name="phone" placeholder="Phone:" class="w-100" required="required">
+                      </div>
+                      <div class="row-part">
+                        <input type="text" name="subject" placeholder="Subject:" class="w-100" required="required">
+                      </div>
+                      <div class="row-part">
+                        <textarea class="txt-area-bot w-100" name="requirement"  placeholder="Tell Us About Your Requirement:" required="required"></textarea>
                       </div>
                     </div>
-                  </form>
-            </div>
-            <div class="modal-footer border-top">
-          </div>
+                  </div>
+                  <div class="clear"></div>
+                  <div class="col-12 text-center">
+                    <button class="btn_n3 w-50 mb-3" type="submit">Let's Connect</button>
+                  </div>
+                </div>
+              </form>
         </div>
+        <div class="modal-footer border-top">
       </div>
+    </div>
+  </div>
 
-      <!-- End Of Form Modal -->
+  <!-- End Of Form Modal -->
+
+  <!--  Optional JavaScript -->
+  <script src="assets/js/jquery-3.6.3.min.js"></script>
+  <!-- Bootstrap Bundle Js -->
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <!-- carousel Js-->
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <!-- Custom Js -->
+  <script src="assets/js/custom.js"></script>
   
-      <!--  Optional JavaScript -->
-      <script src="assets/js/jquery-3.6.3.min.js"></script>
-      <!-- Bootstrap Bundle Js -->
-      <script src="assets/js/bootstrap.bundle.min.js"></script>
-      <!-- carousel Js-->
-      <script src="assets/js/owl.carousel.min.js"></script>
-      <!-- Custom Js -->
-      <script src="assets/js/custom.js"></script>
-      
-  </body>
-  </html>
+</body>
+</html>
