--- a/career.html
+++ b/career.html
@@ -254,13 +254,13 @@
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
                     <h3>CASE STUDIES</h3>
                     <ul class="list-unstyled case-links">
-                        <li><a href="#">Docsink</a></li>
-                        <li><a href="#">Amber Alert GPS</a></li>
-                        <li><a href="#">Kolkata Airport</a></li>
-                        <li><a href="#">Eptisa</a></li>
-                        <li><a href="#">Inkubate</a></li>
-                        <li><a href="#">Grid</a></li>
-                        <li><a href="#">Meri Jaan</a></li>
+                      <li><a href="docsink.html">Docsink</a></li>
+                      <li><a href="amber-alert-gps.html">Amber Alert GPS</a></li>
+                      <li><a href="kolkata-airport.html">Kolkata Airport</a></li>
+                      <li><a href="eptisa.html">Eptisa</a></li>
+                      <li><a href="inkubate.html">Inkubate</a></li>
+                      <li><a href="grid.html">Grid</a></li>
+                      <li><a href="meri-jaan.html">Meri Jaan</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
@@ -275,7 +275,7 @@
                 </div>
                 <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
                     <h3 class="float-lg-start"><a class="heading-link" href="career.html">CAREERS</a></h3>
-                    <h3 class="float-lg-end"><a class="heading-link" href="#">BLOG</a></h3>
+                    <h3 class="float-lg-end"><a class="heading-link" href="blog.html">BLOG</a></h3>
                     <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
                     <p class="text-muted"><a class="text-black" href="assets/docs/client-ideas-sheet.pdf" target="_blank">CLIENT IDEAS SHEET</a></p>
                 </div>
@@ -283,7 +283,7 @@
         </div>
       </footer>
       <!-- End Of Footer Section -->
-      <div class="footer-bottom bg-light py-3">
+      <div class="footer-bottom bg-lightgrey py-3">
         <div class="container">
           <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
         </div>
