updated pages completed

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           </div>
         </div>
         <div class="d-grid gap-2 col-3 mx-auto">
-          <a href="#" class="btn btn-primary rounded-pill bg-red border-0" type="button">Start A Project</a>
+          <a href="contact.html" class="btn btn-primary rounded-pill bg-red border-0" type="button">Start A Project</a>
         </div>
       </div>
      
