updated pages completed

--- a/app-developers-utah.html
+++ b/app-developers-utah.html
@@ -82,7 +82,7 @@
     <div class="banner-section">
         <img src="assets/images/banner/banner_custom_app.jpg" alt="" width="100%">
         
-            <div class="banner-content text-end py-5 my-5">
+            <div class="banner-content text-end py-5 my-5 d-lg-block d-none">
             <div class="container">
                 <h1>WE CREATE THE BEST APPS FOR YOUR</h1>
                 <h1>BUSINESS WITH OUR ADVANCED APP</h1>
