--- a/blockchain-utah.html
+++ b/blockchain-utah.html
@@ -80,9 +80,9 @@
     <!-- Banner Section -->
 
     <div class="banner-section">
-        <img src="assets/images/banner/banner_machine-learning.jpg" alt="" width="100%">
+        <img src="assets/images/banner/banne_blockchain.jpg" alt="" width="100%">
         
-            <div class="banner-content text-start py-5 my-5">
+            <div class="banner-content text-end py-5 my-5">
             <div class="container">
                 <h1>WE ARE OPTIMIZING COST ENSURING</h1>
                 <h1>DATA TRANSPARENCY WITH THE LATEST</h1>
