--- a/machine-learning-utah.html
+++ b/machine-learning-utah.html
@@ -82,7 +82,7 @@
     <div class="banner-section">
         <img src="assets/images/banner/banner_machine-learning.jpg" alt="" width="100%">
         
-            <div class="banner-content text-start py-4 my-4">
+            <div class="banner-content text-start py-4 my-4 d-lg-block d-none">
             <div class="container">
                 <h1>BY DETECTION OF REAL-TIME HUMAN</h1>
                 <h1>PATTERNS, FRAUD DETECTION AND</h1>
