updated pages completed

--- a/app-developers-utah.html
+++ b/app-developers-utah.html
@@ -82,11 +82,11 @@
     <div class="banner-section">
         <img src="assets/images/banner/banner_custom_app.jpg" alt="" width="100%">
         
-            <div class="banner-content text-end py-5 my-5 d-lg-block d-none">
+            <div class="banner-content text-end py-5 my-5">
             <div class="container">
                 <h1>WE CREATE THE BEST APPS FOR YOUR</h1>
                 <h1>BUSINESS WITH OUR ADVANCED APP</h1>
-                <h1>DEVELOPMENT SOLUTIONS COUPLED <br>WITH MOBILITY</h1>
+                <h1>DEVELOPMENT SOLUTIONS</h1>
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none" data-bs-toggle="modal" data-bs-target="#formModal">Start Discussion</a>
             </div>
         </div>
