--- a/machine-learning-utah.html
+++ b/machine-learning-utah.html
@@ -82,11 +82,9 @@
     <div class="banner-section">
         <img src="assets/images/banner/banner_machine-learning.jpg" alt="" width="100%">
         
-            <div class="banner-content text-start py-4 my-4 d-lg-block d-none">
+            <div class="banner-content text-start py-4 my-4">
             <div class="container">
-                <h1>BY DETECTION OF REAL-TIME HUMAN</h1>
                 <h1>PATTERNS, FRAUD DETECTION AND</h1>
-                <h1>ERROR-FREE PREDICTIONS,</h1>
                 <h1>MACHINE LEARNING IS CHANGING THE</h1>
                 <h1>SHAPE OF MODERN BUSINESSES TODAY</h1>
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none" data-bs-toggle="modal" data-bs-target="#formModal">Start Discussion</a>
